--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Durum Çubuğu Alıntıları",
 	"version": "1.0.0",
 	"minAppVersion": "1.2.0",
-	"description": "Günlük Alıntıları Durum çubuğunda Göster",
+	"description": "Günlük Alıntıları Durum Çubuğunda Göster",
 	"author": "Mehmet Keçeci",
 	"authorUrl": "https://github.com/WhiteSymmetry",
 	"isDesktopOnly": false
