--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "alinti",
-	"name": "Durum Çubuğu Alıntıları",
-	"version": "1.0.0",
-	"minAppVersion": "1.2.0",
-	"description": "Günlük Alıntıları Durum Çubuğunda Göster",
-	"author": "Mehmet Keçeci",
-	"authorUrl": "https://github.com/WhiteSymmetry",
-	"isDesktopOnly": false
+    "id": "alinti",
+    "name": "Durum Çubuğu Alıntıları",
+    "version": "1.0.0",
+    "minAppVersion": "1.2.0",
+    "description": "Günlük alıntıları durum çubuğunda gösteren bir eklenti.",
+    "author": "Mehmet Keçeci",
+    "authorUrl": "https://github.com/WhiteSymmetry",
+    "isDesktopOnly": false
 }
